# call_functions

./: .env.example  .~lock.test.csv#  Cargo.toml  LICENSE  README.md  extract_companies.json  extract_company_statistics.csv  extract_complex_companies.json  extract_person_statistics.csv  extract_persons.json  extract_statistics.csv  simple_cases.json  statistics.csv  test.csv  translate_examples.json
data/extract/: company_statistics.csv  person_statistics.csv
data/translate/: translate_statistics.csv
src/: lib.rs  main.rs
src/cases/: extract.rs  mod.rs  simple.rs  translate.rs
src/extract/: company.rs  mod.rs  person.rs
src/reqwest/: mod.rs  ollama.rs
src/reqwest/cases/: mod.rs  simple.rs
src/statistic/: mod.rs
src/translate/: mod.rs
