[package]
name = "call_functions"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
rig-core = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"]}
anyhow = "1.0.100"
schemars = "1.2.0"
